# dbase

./: .gitignore  .travis.yml  Cargo.toml  README.md  test31.dbf  test31.dbt
src/: fields.rs  header.rs  lib.rs
tests/: dbase.rs  empty_data_tests.dbf  empty_data_tests.fpt  open_file.rs  reference_fpt.dbf  reference_fpt.fpt  reference_gis.dbf
