[package]
name = "dbase_parser"
version = "0.1.0"
authors = ["Seb Renauld <seb.renauld@gmail.com>"]
edition = "2018"
description = "A fast, efficient dbase DBF/DBT/FPT parser"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/srenauld/dbase"
repository = "https://github.com/srenauld/dbase"

[dependencies]
chrono = "0.4.8"
byteorder = "1.3.2"